# keeweb-rs

./: .gitignore  Cargo.toml  config.toml  flake.nix
.cargo/: config.toml
.github/workflows/: deploy-pages.yml
crates/kdbx-core/: Cargo.toml
crates/kdbx-core/src/: database.rs  entry.rs  error.rs  group.rs  kdbx4_decrypt.rs  lib.rs  totp.rs
crates/kdbx-diff/: Cargo.toml
crates/kdbx-diff/src/: diff.rs  lib.rs  merge.rs  types.rs
crates/keeweb-server/: Cargo.toml
crates/keeweb-server/src/: config.rs  main.rs  state.rs
crates/keeweb-server/src/routes/: argon2.rs  files.rs  mod.rs  settings.rs  sse.rs
crates/keeweb-server/src/services/: mod.rs  watcher.rs
crates/keeweb-wasm/: Cargo.toml
crates/keeweb-wasm/src/: lib.rs
frontend/: Cargo.toml  Trunk.toml  build.rs  index.html  initializer.js
frontend/public/: styles.css
frontend/src/: app.rs  argon2_client.rs  helper_client.rs  lib.rs  state.rs  worker_client.rs
frontend/src/components/: auto_lock.rs  entry_detail.rs  entry_list.rs  file_picker.rs  mod.rs  password_generator.rs  sidebar.rs  theme_toggle.rs  unlock_dialog.rs
frontend/src/components/entry_detail/: mod.rs  totp.rs
frontend/src/utils/: clipboard.rs  mod.rs
nix/: rust.nix
