[workspace]
resolver = "2"
members = [
    "crates/kdbx-core",
    "crates/kdbx-diff",
    "crates/keeweb-wasm",
    "crates/keeweb-server",
    "frontend",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["John Rinehart"]
repository = "https://github.com/johnrichardrinehart/keeweb-rs"

[workspace.dependencies]
# Shared dependencies across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

# KeePass
keepass = "0.8"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
serde-wasm-bindgen = "0.6"

# Backend
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
notify = "6"
tower-http = { version = "0.5", features = ["cors", "fs"] }

[profile.release]
lto = true
opt-level = 3    # Optimize for speed (important for Argon2 KDF)
codegen-units = 1  # Better optimization at cost of compile time
