[package]
name = "keeweb-frontend"
version = "0.1.0"
edition = "2021"
description = "Web frontend for keeweb-rs password manager"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.6", features = ["csr"] }

# Our WASM bindings
keeweb-wasm = { path = "../crates/keeweb-wasm" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
base64 = "0.22"

# WASM utilities
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "Event",
    "DragEvent",
    "DataTransfer",
    "DataTransferItemList",
    "DataTransferItem",
    "File",
    "FileList",
    "FileReader",
    "Blob",
    "Clipboard",
    "Navigator",
    "Storage",
    "MouseEvent",
    "KeyboardEvent",
    "InputEvent",
    "FocusEvent",
    "EventTarget",
    "Node",
    "NodeList",
    "CssStyleDeclaration",
    "DomTokenList",
    "Url",
    "SubmitEvent",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "ErrorEvent",
    "Blob",
    "BlobPropertyBag",
    "Performance",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
    "MediaQueryList",
    "MediaQueryListEvent",
] }

# Note: File::array_buffer() requires no extra features, it's part of the base File API

# Async/futures
futures = "0.3"

# UUID handling
uuid = { version = "1", features = ["v4", "serde", "js"] }

# Logging
log = "0.4"
console_log = { version = "1", features = ["color"] }
console_error_panic_hook = "0.1"

# Random for password generation
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = ["small_rng"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
