[package]
name = "kdbx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core KeePass database operations library, WASM-compatible"

[dependencies]
keepass.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
zeroize.workspace = true
getrandom.workspace = true

# For custom KDBX4 decryption with external KDF
byteorder = "1"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
digest = "0.10"
aes = "0.8"
cbc = "0.1"
cipher = "0.4"
flate2 = "1"
chacha20 = "0.9"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = ["console"] }

[dev-dependencies]
tempfile = "3"

[features]
default = []
