[package]
name = "kdbx-diff"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Diff and merge library for KeePass databases, WASM-compatible"

[dependencies]
kdbx-core = { path = "../kdbx-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true

[dev-dependencies]
tempfile = "3"

[features]
default = []
