[package]
name = "keeweb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Optional backend server for keeweb-rs"

[[bin]]
name = "keeweb-server"
path = "src/main.rs"

[dependencies]
kdbx-core = { path = "../kdbx-core" }
kdbx-diff = { path = "../kdbx-diff" }
axum.workspace = true
tokio.workspace = true
notify.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
toml = "0.8"
tracing = "0.1"
argon2 = { version = "0.6.0-rc.5", features = ["parallel"] }
base64 = "0.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"

[features]
default = []
