[package]
name = "keeweb-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "WASM bindings for keeweb-rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kdbx-core = { path = "../kdbx-core" }
kdbx-diff = { path = "../kdbx-diff" }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
js-sys.workspace = true
uuid.workspace = true
web-sys = { workspace = true, features = [
    "console",
    "Window",
    "Document",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
